@@ -10,7 +10,7 @@ import ru.kata.spring.boot_security.demo.model.Role;
 import ru.kata.spring.boot_security.demo.model.User;
 
 import javax.annotation.PostConstruct;
-import java.util.Collections;
+import java.util.Set;
 
 @SpringBootApplication
 public class SpringBootSecurityDemoApplication {
@@ -37,9 +37,18 @@ public class SpringBootSecurityDemoApplication {
 		userDAO.save(User.builder()
 				.name("admin")
 				.lastname("adminov")
-				.username("admin")
+				.username("admin@mail.ru")
+				.age(18)
 				.password(passwordEncoder.encode("admin"))
-				.roles(Collections.singleton(admin)).build()
+				.roles(Set.of(admin, user)).build()
+		);
+		userDAO.save(User.builder()
+				.name("aFirstName")
+				.lastname("aLastName")
+				.username("a@mail.ru")
+				.age(20)
+				.password(passwordEncoder.encode("a"))
+				.roles(Set.of(admin, user)).build()
 		);
 	}
 }
